--- a/Inventory/appsettings.json
+++ b/Inventory/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Inventory-3FF32A01-565E-4F48-8CD6-622AFFA5E757;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Inventory-3FF32A01-565E-4F48-8CD6-622AFFA5E757;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebMvcContext": "server=localhost;userid=developer;password=1234567;database=inventorydb"
   },
   "Logging": {
     "LogLevel": {
