--- a/Inventory/Inventory.csproj
+++ b/Inventory/Inventory.csproj
@@ -6,10 +6,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20200701125631_OnDelete.cs" />
+    <Compile Remove="Data\Migrations\20200701125631_OnDelete.Designer.cs" />
+    <Compile Remove="Data\Migrations\20200701130500_OnDeleteUpdate.cs" />
+    <Compile Remove="Data\Migrations\20200701130500_OnDeleteUpdate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\" />
   </ItemGroup>
 
 </Project>
